--- a/Abreme.html
+++ b/Abreme.html
@@ -11,11 +11,13 @@
 <body>
     <div class="greetings">
 
-        <span>H</span>
-        <span>O</span>
-        <span>L</span>
-        <span>A</span>
-        <span> </span>
+        <span>B</span>
+        <span>U</span>
+        <span>E</span>
+        <span>N</span>
+        <span>A </span>
+        <span>S</span>
+        <span>  </span>
         <span>H</span>
         <span>E</span>
         <span>I</span>
